--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,6 +117,17 @@
     border: 1px solid rgba(209, 213, 219, 0.138);
 }
 
+
+
+.glassy-card-lg {
+    backdrop-filter: blur(7px) saturate(180%);
+    -webkit-backdrop-filter: blur(7px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 12px;
+    border: 1px solid rgba(209, 213, 219, 0.3);
+}
+
+
 @layer components {
   /* 1. Main Background Container (Dark Gradient) */
   .main-background {
