--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+   --animate-shine: shine var(--duration) infinite linear;
 }
 
 :root {
@@ -405,3 +406,15 @@
   background-size: 200% 200%;
   animation: gradient-shift 5s ease infinite;
 }
+
+ @keyframes shine {
+    0% {
+      background-position: 0% 0%;
+    }
+    50% {
+      background-position: 100% 100%;
+    }
+    to {
+      background-position: 0% 0%;
+    }
+  }
